# nametag

./: CHANGELOG.markdown  Cargo.toml  Dockerfile  LICENSE.txt  dist-workspace.toml  docker-compose.yml  readme.markdown
src/: lib.rs  main.rs
word-lists/: adjectives.txt  nouns.txt
