[package]
name = "nametag"
version = "0.2.0"
edition = "2021"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "AGPL-3.0-only"
readme = "readme.markdown"
repository = "https://github.com/sts10/nametag"

[dependencies]
rand = "0.9.0"
clap = { version = "4.5.27", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
